[project]
name = "finetuningwithwnnandhdc"
version = "0.1.0"
description = ""
authors = [
    {name = "Josué Amaral",email = "josueamaral15@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scikit-learn (>=1.7.0,<2.0.0)",
    "ucimlrepo (>=0.0.7,<0.0.8)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "pandas (>=2.3.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
